objects/amazonconnect__AC_Feature__c.object
<CustomObject>
    <fields>
        <fullName>amazonconnect__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amazonconnect__CtiAdapter__c</fullName>
        <label>CTI Adapter</label>
        <referenceTo>amazonconnect__AC_CtiAdapter__c</referenceTo>
        <relationshipLabel>Features</relationshipLabel>
        <relationshipName>Features</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Value__c</fullName>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>AC Feature</label>
    <nameField>
        <label>AC Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AC Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>